# COMET

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: custom_dataset_template.py  minimal_train.py
src/comet_model/: __init__.py  config.py  data.py  model.py
tests/: test_model.py
