[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comet-model"
version = "0.1.0"
description = "Training-ready PyTorch implementation of the COMET multimodal architecture."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary - add your preferred LICENSE before publishing"}
authors = [
  {name = "COMET authors"}
]
dependencies = [
  "torch>=2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

